--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <!-- Fonts -->
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+        <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
     <body></body>
 </html>
