--- a/index.html
+++ b/index.html
@@ -27,27 +27,69 @@
     <script>
       load("#header", "./templates/header.html ");
     </script>
-    <div class="container">
+    <div class="container home">
       <!-- SlideShow -->
-      <div class="slideshow">
-        <!-- SlideShow Inner -->
-        <div class="slideshow__inner d-flex">
-          <div class="slideshow__item">
-            <a href="#!" class="slideshow__link">
-              <picture>
-                <source media="(max-width: 767.98px)" srcset="./assets/img/slideshow/slideshow-01Small.png" />
-                <img src="./assets/img/slideshow/slideShow-01.png" alt="" class="slideshow__img" />
-              </picture>
-            </a>
-          </div>
-          <!-- Slideshow page -->
-          <div class="slideshow__page d-flex">
-            <span class="slideshow__num">1</span>
-            <span class="slideshow__slider"></span>
-            <span class="slideshow__num">5</span>
+      <section class="home__container">
+        <div class="slideshow">
+          <!-- SlideShow Inner -->
+          <div class="slideshow__inner d-flex">
+            <div class="slideshow__item">
+              <a href="#!" class="slideshow__link">
+                <picture>
+                  <source media="(max-width: 767.98px)" srcset="./assets/img/slideshow/slideshow-01Small.png" />
+                  <img src="./assets/img/slideshow/slideShow-01.png" alt="" class="slideshow__img" />
+                </picture>
+              </a>
+            </div>
+            <!-- Slideshow page -->
+            <div class="slideshow__page d-flex">
+              <span class="slideshow__num">1</span>
+              <span class="slideshow__slider"></span>
+              <span class="slideshow__num">5</span>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
+
+      <!-- Browse Categories -->
+      <section class="home__container">
+        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__cate row row-cols-3 row-cols-md-1">
+          <!-- Cateegory Item 1 -->
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category/category-1.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$24 - $150</h3>
+                <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+              </section>
+            </article>
+          </div>
+          <!-- Cateegory Item 2 -->
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category/category-2.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$37 - $160</h3>
+                <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+              </section>
+            </article>
+          </div>
+          <!-- Cateegory Item 3 -->
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category/category-3.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$32 - $160</h3>
+                <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+              </section>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Products -->
+      <section class="home__container"></section>
     </div>
     <!-- Footer -->
     <footer id="footer"></footer>
