--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <!-- Browse Categories -->
       <section class="home__container">
-        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__row"><h2 class="home__heading">Browse Categories</h2></div>
         <div class="home__cate row row-cols-3 row-cols-md-1">
           <!-- Cateegory Item 1 -->
           <div class="col">
@@ -89,7 +89,93 @@
       </section>
 
       <!-- Products -->
-      <section class="home__container"></section>
+      <section class="home__container">
+        <div class="home__row">
+          <h3 class="home__heading">Total LavAzza 1320</h3>
+          <button class="filter-btn">
+            Filter
+            <img src="./assets/img/icons/filter.svg" alt="" class="filter-btn__icon icon" />
+          </button>
+        </div>
+        <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3">
+          <!-- Product card 1 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Coffee Beans - Espresso Arabica and Robusta Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$47.00</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.3</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 2 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza Coffee Blends - Try the Italian Espresso</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$53.00</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">3.4</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 3 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza - Caffè Espresso Black Tin - Ground coffee</h3>
+              <p class="product-card__brand">welikecoffee</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$99.99</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">5.0</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 4 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Qualità Oro Mountain Grown - Espresso Coffee Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$38.65</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.4</span>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
     </div>
     <!-- Footer -->
     <footer id="footer"></footer>
