--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
     <div class="container home">
       <!-- SlideShow -->
-      <section class="home__container">
+      <div class="home__container">
         <div class="slideshow">
           <!-- SlideShow Inner -->
           <div class="slideshow__inner d-flex">
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- Browse Categories -->
       <section class="home__container">
@@ -57,33 +57,39 @@
         <div class="home__cate row row-cols-3 row-cols-md-1">
           <!-- Cateegory Item 1 -->
           <div class="col">
-            <article class="cate-item">
-              <img src="./assets/img/category/category-1.png" alt="" class="cate-item__thumb" />
-              <section class="cate-item__info">
-                <h3 class="cate-item__title">$24 - $150</h3>
-                <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
-              </section>
-            </article>
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/img/category/category-1.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$24 - $150</h3>
+                  <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                </div>
+              </article>
+            </a>
           </div>
           <!-- Cateegory Item 2 -->
           <div class="col">
-            <article class="cate-item">
-              <img src="./assets/img/category/category-2.png" alt="" class="cate-item__thumb" />
-              <section class="cate-item__info">
-                <h3 class="cate-item__title">$37 - $160</h3>
-                <p class="cate-item__desc">Espresso arabica and robusta beans</p>
-              </section>
-            </article>
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/img/category/category-2.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$37 - $160</h3>
+                  <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+                </div>
+              </article>
+            </a>
           </div>
           <!-- Cateegory Item 3 -->
           <div class="col">
-            <article class="cate-item">
-              <img src="./assets/img/category/category-3.png" alt="" class="cate-item__thumb" />
-              <section class="cate-item__info">
-                <h3 class="cate-item__title">$32 - $160</h3>
-                <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
-              </section>
-            </article>
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/img/category/category-3.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$32 - $160</h3>
+                  <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+                </div>
+              </article>
+            </a>
           </div>
         </div>
       </section>
@@ -92,11 +98,105 @@
       <section class="home__container">
         <div class="home__row">
           <h3 class="home__heading">Total LavAzza 1320</h3>
-          <button class="filter-btn">
-            Filter
-            <img src="./assets/img/icons/filter.svg" alt="" class="filter-btn__icon icon" />
-          </button>
+          <!-- Filter -->
+          <div class="filter-wrap">
+            <button class="filter-btn js-toggle" toggle-target="#home-filter">
+              Filter
+              <img src="./assets/img/icons/filter.svg" alt="" class="filter-btn__icon icon" />
+            </button>
+            <div class="filter hide" id="home-filter">
+              <img src="./assets/img/icons/filter-top.svg" class="filter__arrow" alt="" />
+              <h3 class="filter__heading">Filter</h3>
+              <form action="" class="filter__form">
+                <div class="filter__row filter__content">
+                  <!-- Filter Column 1 -->
+                  <div class="filter__col">
+                    <label for="" class="filter__form--lable">Price</label>
+                    <div class="filter__form--group">
+                      <div class="filter__form--slider" style="--min-value: 10%; --max-value: 60%"></div>
+                    </div>
+                    <div class="filter__form--group filter__form--group--inline">
+                      <div>
+                        <label for="" class="filter__form--lable filter__form--lable--small">Minimum</label>
+                        <div class="filter__form--text-input filter__form--text-input-small">
+                          <input type="text" class="filter__form--input" value="$30.00" />
+                        </div>
+                      </div>
+                      <div>
+                        <label for="" class="filter__form--lable filter__form--lable--small">Maximum</label>
+                        <div class="filter__form--text-input filter__form--text-input-small">
+                          <input type="text" class="filter__form--input" value="$100.00" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="filter__separate"></div>
+
+                  <!-- Filter Column 2 -->
+                  <div class="filter__col">
+                    <label for="" class="filter__form--lable">Size/Weight</label>
+                    <div class="filter__form--group">
+                      <div class="filter__form-select-wrap">
+                        <div class="filter__form-select" style="--width: 157px">
+                          500g
+                          <img
+                            src="./assets/img/icons/select-arrow.svg"
+                            alt=""
+                            class="filter__form-select-arrow-down icon"
+                          />
+                        </div>
+                        <!-- <div class="filter__separate"></div> -->
+                        <div class="filter__form-select">
+                          Gram
+                          <img
+                            src="./assets/img/icons/select-arrow.svg"
+                            alt=""
+                            class="filter__form-select-arrow-down icon"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="filter__form--group">
+                      <div class="filter__form-tags">
+                        <button class="filter__form-tag">Small</button>
+                        <button class="filter__form-tag">Medium</button>
+                        <button class="filter__form-tag">Large</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="filter__separate"></div>
+
+                  <!-- Filter Column 3 -->
+                  <div class="filter__col">
+                    <label for="" class="filter__form--lable">Brand</label>
+                    <div class="filter__form--group">
+                      <div class="filter__form--text-input">
+                        <input type="text" class="filter__form--input" placeholder="Search brand name" />
+                        <img src="./assets/img/icons/search.svg" alt="" class="filter__form--input-icon icon" />
+                      </div>
+                    </div>
+                    <div class="filter__form--group">
+                      <div class="filter__form-tags">
+                        <button class="filter__form-tag">Lavazza</button>
+                        <button class="filter__form-tag">Nescafe</button>
+                        <button class="filter__form-tag">Starbucks</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter__row filter__footer">
+                  <button class="btn btn--text filter__cancel js-toggle" toggle-target="#home-filter">Cancel</button>
+                  <button class="btn btn--primary filter__submit js-toggle" toggle-target="#home-filter">
+                    Show Result
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
+
         <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3">
           <!-- Product card 1 -->
           <div class="col">
