--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script>
       load("#header", "./templates/header.html ");
     </script>
-    <div class="container home">
+    <!-- main -->
+    <main class="container home">
       <!-- SlideShow -->
       <div class="home__container">
         <div class="slideshow">
@@ -274,11 +275,87 @@
               </div>
             </article>
           </div>
+          <!-- Product card 5 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Coffee Beans - Espresso Arabica and Robusta Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$47.00</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.3</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 6 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza Coffee Blends - Try the Italian Espresso</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$53.00</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">3.4</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 7 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza - Caffè Espresso Black Tin - Ground coffee</h3>
+              <p class="product-card__brand">welikecoffee</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$99.99</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">5.0</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 8 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!"><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb" /></a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Qualità Oro Mountain Grown - Espresso Coffee Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$38.65</span>
+                <img src="./assets/img/icons/start.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.4</span>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
-    </div>
+    </main>
     <!-- Footer -->
-    <footer id="footer"></footer>
+    <footer id="footer" class="footer"></footer>
     <script>
       load("#footer", "./templates/footer.html ");
     </script>
