--- a/new-password.html
+++ b/new-password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sign In</title>
+    <title>Create new password</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -25,58 +25,40 @@
     <main class="auth">
       <!-- Auth Intro -->
       <div class="auth__intro d-md-none">
-        <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
-        <p class="auth__intro-text">The best of luxury brand values, high quality products, and innovative services</p>
+        <img src="./assets/img/auth/forgot-password.png" alt="" class="auth__intro-img" />
       </div>
       <!-- Auth Content -->
       <div class="auth__content">
         <div class="auth__content-inner">
           <!-- Logo -->
-          <a href="./" class="logo">
+          <a href="./signIn.html" class="logo">
             <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img" />
             <h2 class="logo__title">grocerymart</h2>
           </a>
-          <h1 class="auth__heading">Hello Again!</h1>
-          <p class="auth__desc">
-            Welcome back to sign in. As a returning customer, you have access to your previously saved all information.
-          </p>
+          <h1 class="auth__heading">Create new password</h1>
+          <p class="auth__desc">At least 6 characters, with uppercase and lowrcase letter</p>
           <!-- Form -->
-          <form action="./index-logined.html" class="form auth__form">
+          <form action="./signIn.html" class="form auth__form">
             <div class="form__group">
               <div class="form__text-input">
-                <input type="email" name="" id="" placeholder="Email" minlength="6" class="form__input" required />
-                <img src="./assets/img/icons/message.svg" class="form__input-icon" alt="" />
-                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
-              </div>
-              <p class="form__error">Email chưa đúng định dạng</p>
-            </div>
-            <div class="form__group">
-              <div class="form__text-input">
-                <input type="password" placeholder="Password" minlength="6" class="form__input" required />
+                <input type="password" placeholder="New password" minlength="6" class="form__input" required />
                 <img src="./assets/img/icons/lock.svg" class="form__input-icon" alt="" />
                 <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
               </div>
               <p class="form__error">Mật khẩu ít nhất 6 kí tự</p>
             </div>
-            <div class="form__group form__group--inline">
-              <label class="form__checkbox">
-                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
-                <span class="form__checkbox-lable">Set as default card</span>
-              </label>
-              <a href="./reset-password.html" class="auth__link form__pull-right">Forgot password?</a>
+            <div class="form__group">
+              <div class="form__text-input">
+                <input type="password" placeholder="Confirm new password" minlength="6" class="form__input" required />
+                <img src="./assets/img/icons/lock.svg" class="form__input-icon" alt="" />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Mật khẩu chưa chính xác</p>
             </div>
             <div class="form__group auth__btn-group">
-              <button class="btn btn--primary auth__btn form__submit-btn">Sign In</button>
-              <button class="btn btn--outline auth__btn btn--no-margin">
-                <img src="./assets/img/icons/google.svg" class="btn__icon icon" alt="" />
-                Sign in with Google
-              </button>
+              <button class="btn btn--primary auth__btn form__submit-btn">Reset Password</button>
             </div>
           </form>
-          <p class="auth__text">
-            Don’t have an account yet?
-            <a href="./signUp.html" class="auth__link">Sign Up</a>
-          </p>
         </div>
       </div>
     </main>
