--- a/product-detail.html
+++ b/product-detail.html
@@ -25,7 +25,7 @@
     <!-- Header -->
     <header id="header" class="header"></header>
     <script>
-      load("#header", "./templates/header.html ");
+      load("#header", "./templates/header-logined.html ");
     </script>
     <!-- main -->
     <main class="container home">
@@ -203,17 +203,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
-              </h3>
+              <h3 class="product-card__title">Coffee Beans - Espresso Arabica and Robusta Beans</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$47.00</span>
@@ -226,17 +222,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Lavazza Coffee Blends - Try the Italian Espresso</a>
-              </h3>
+              <h3 class="product-card__title">Lavazza Coffee Blends - Try the Italian Espresso</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$53.00</span>
@@ -249,17 +241,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn like-btn--liked product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
-              </h3>
+              <h3 class="product-card__title">Lavazza - Caffè Espresso Black Tin - Ground coffee</h3>
               <p class="product-card__brand">welikecoffee</p>
               <div class="product-card__row">
                 <span class="product-card__price">$99.99</span>
@@ -272,17 +260,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
-              </h3>
+              <h3 class="product-card__title">Qualità Oro Mountain Grown - Espresso Coffee Beans</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$38.65</span>
@@ -295,17 +279,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-1.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
-              </h3>
+              <h3 class="product-card__title">Coffee Beans - Espresso Arabica and Robusta Beans</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$47.00</span>
@@ -318,17 +298,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-2.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Lavazza Coffee Blends - Try the Italian Espresso</a>
-              </h3>
+              <h3 class="product-card__title">Lavazza Coffee Blends - Try the Italian Espresso</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$53.00</span>
@@ -341,17 +317,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-3.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn like-btn--liked product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
-              </h3>
+              <h3 class="product-card__title">Lavazza - Caffè Espresso Black Tin - Ground coffee</h3>
               <p class="product-card__brand">welikecoffee</p>
               <div class="product-card__row">
                 <span class="product-card__price">$99.99</span>
@@ -364,17 +336,13 @@
           <div class="col">
             <article class="product-card">
               <div class="product-card__img-wrap">
-                <a href="./product-detail.html"
-                  ><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb"
-                /></a>
+                <a href="#!"><img src="./assets/img/product/product-4.png" alt="" class="product-card__thumb" /></a>
                 <button class="like-btn product-card__like-btn">
                   <img src="./assets/img/icons/heart.svg" alt="" class="like-btn__icon icon" />
                   <img src="./assets/img/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
-              <h3 class="product-card__title">
-                <a href="./product-detail.html">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
-              </h3>
+              <h3 class="product-card__title">Qualità Oro Mountain Grown - Espresso Coffee Beans</h3>
               <p class="product-card__brand">Lavazza</p>
               <div class="product-card__row">
                 <span class="product-card__price">$38.65</span>
