--- a/signUp.html
+++ b/signUp.html
@@ -1,51 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Grocery Mart</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grocery Mart</title>
 
-        <!-- Favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="76x76"
-            href="./assets/favicon/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./assets/favicon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="./assets/favicon/favicon-16x16.png"
-        />
-        <link rel="manifest" href="./assets/favicon/site.webmanifest" />
-        <meta name="msapplication-TileColor" content="#da532c" />
-        <meta name="theme-color" content="#ffffff" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
-        <!-- Fonts -->
-        <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
-        <!-- Style -->
-        <link rel="stylesheet" href="./assets/css/main.css" />
+    <!-- Fonts -->
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <!-- Style -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
 
-        <!-- Script -->
-        <script src="./assets/js/script.js"></script>
-    </head>
-    <body>
-        <!-- Header -->
-        <header id="header"></header>
-        <script>
-            load("#header", "./template/header.html ");
-        </script>
-
-        <!-- Footer -->
-        <footer id="footer"></footer>
-        <script>
-            load("#footer", "./template/footer.html ");
-        </script>
-    </body>
+    <!-- Script -->
+    <script src="./assets/js/script.js"></script>
+  </head>
+  <body>
+    <main class="auth">
+      <!-- Auth Intro -->
+      <div class="auth__intro">
+        <!-- Logo -->
+        <a href="./" class="logo d-none d-md-flex auth__intro-logo">
+          <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img" />
+          <h1 class="logo__title">grocerymart</h1>
+        </a>
+        <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
+        <p class="auth__intro-text">The best of luxury brand values, high quality products, and innovative services</p>
+        <button class="auth__intro-next d-none d-md-flex js-toggle" toggle-target="#auth__content">
+          <img src="./assets/img/auth/intro-arrow.svg" alt="" />
+        </button>
+      </div>
+      <!-- Auth Content -->
+      <div id="auth__content" class="auth__content hide">
+        <div class="auth__content-inner">
+          <!-- Logo -->
+          <a href="./" class="logo">
+            <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img" />
+            <h1 class="logo__title">grocerymart</h1>
+          </a>
+          <h1 class="auth__heading">Sign Up</h1>
+          <p class="auth__desc">Let’s create your account and Shop like a pro and save money.</p>
+          <!-- Form -->
+          <form action="./index-logined.html" class="form auth__form">
+            <div class="form__group">
+              <div class="form__text-input">
+                <input type="email" name="" id="" placeholder="Email" minlength="6" class="form__input" required />
+                <img src="./assets/img/icons/message.svg" class="form__input-icon" alt="" />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Email chưa đúng định dạng</p>
+            </div>
+            <div class="form__group">
+              <div class="form__text-input">
+                <input type="password" placeholder="Password" minlength="6" class="form__input" required />
+                <img src="./assets/img/icons/lock.svg" class="form__input-icon" alt="" />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Mật khẩu ít nhất 6 kí tự</p>
+            </div>
+            <div class="form__group">
+              <div class="form__text-input">
+                <input type="password" placeholder="Confirm password" minlength="6" class="form__input" required />
+                <img src="./assets/img/icons/lock.svg" class="form__input-icon" alt="" />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Mật khẩu chưa chính xác</p>
+            </div>
+            <div class="form__group form__group--inline">
+              <label class="form__checkbox">
+                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
+                <span class="form__checkbox-lable">Set as default card</span>
+              </label>
+            </div>
+            <div class="form__group auth__btn-group">
+              <button class="btn btn--primary auth__btn form__submit-btn">Sign Up</button>
+              <button class="btn btn--outline auth__btn btn--no-margin">
+                <img src="./assets/img/icons/google.svg" class="btn__icon icon" alt="" />
+                Sign in with Google
+              </button>
+            </div>
+          </form>
+          <p class="auth__text">
+            You have an account yet?
+            <a href="./signIn.html" class="auth__link">Sign In</a>
+          </p>
+        </div>
+      </div>
+    </main>
+    <script>
+      window.dispatchEvent(new Event("template-loaded"));
+    </script>
+  </body>
 </html>
