--- a/index-logined.html
+++ b/index-logined.html
@@ -108,23 +108,23 @@
             <div class="filter hide" id="home-filter">
               <img src="./assets/img/icons/filter-top.svg" class="filter__arrow" alt="" />
               <h3 class="filter__heading">Filter</h3>
-              <form action="" class="filter__form">
+              <form action="" class="filter__form form">
                 <div class="filter__row filter__content">
                   <!-- Filter Column 1 -->
                   <div class="filter__col">
-                    <label for="" class="filter__form--lable">Price</label>
+                    <label for="" class="form__lable">Price</label>
                     <div class="filter__form--group">
                       <div class="filter__form--slider" style="--min-value: 10%; --max-value: 60%"></div>
                     </div>
                     <div class="filter__form--group filter__form--group--inline">
                       <div>
-                        <label for="" class="filter__form--lable filter__form--lable--small">Minimum</label>
+                        <label for="" class="form__lable form__lable--small">Minimum</label>
                         <div class="filter__form--text-input filter__form--text-input-small">
                           <input type="text" class="filter__form--input" value="$30.00" />
                         </div>
                       </div>
                       <div>
-                        <label for="" class="filter__form--lable filter__form--lable--small">Maximum</label>
+                        <label for="" class="form__lable form__lable--small">Maximum</label>
                         <div class="filter__form--text-input filter__form--text-input-small">
                           <input type="text" class="filter__form--input" value="$100.00" />
                         </div>
@@ -136,33 +136,25 @@
 
                   <!-- Filter Column 2 -->
                   <div class="filter__col">
-                    <label for="" class="filter__form--lable">Size/Weight</label>
+                    <label for="" class="form__lable">Size/Weight</label>
                     <div class="filter__form--group">
-                      <div class="filter__form-select-wrap">
-                        <div class="filter__form-select" style="--width: 157px">
+                      <div class="form__select-wrap">
+                        <div class="form__select" style="--width: 157px">
                           500g
-                          <img
-                            src="./assets/img/icons/select-arrow.svg"
-                            alt=""
-                            class="filter__form-select-arrow-down icon"
-                          />
+                          <img src="./assets/img/icons/select-arrow.svg" alt="" class="form__select-arrow-down icon" />
                         </div>
                         <!-- <div class="filter__separate"></div> -->
-                        <div class="filter__form-select">
+                        <div class="form__select">
                           Gram
-                          <img
-                            src="./assets/img/icons/select-arrow.svg"
-                            alt=""
-                            class="filter__form-select-arrow-down icon"
-                          />
+                          <img src="./assets/img/icons/select-arrow.svg" alt="" class="form__select-arrow-down icon" />
                         </div>
                       </div>
                     </div>
                     <div class="filter__form--group">
-                      <div class="filter__form-tags">
-                        <button class="filter__form-tag">Small</button>
-                        <button class="filter__form-tag">Medium</button>
-                        <button class="filter__form-tag">Large</button>
+                      <div class="form__tags">
+                        <button class="form__tag">Small</button>
+                        <button class="form__tag">Medium</button>
+                        <button class="form__tag">Large</button>
                       </div>
                     </div>
                   </div>
@@ -171,7 +163,7 @@
 
                   <!-- Filter Column 3 -->
                   <div class="filter__col">
-                    <label for="" class="filter__form--lable">Brand</label>
+                    <label for="" class="form__lable">Brand</label>
                     <div class="filter__form--group">
                       <div class="filter__form--text-input">
                         <input type="text" class="filter__form--input" placeholder="Search brand name" />
@@ -179,10 +171,10 @@
                       </div>
                     </div>
                     <div class="filter__form--group">
-                      <div class="filter__form-tags">
-                        <button class="filter__form-tag">Lavazza</button>
-                        <button class="filter__form-tag">Nescafe</button>
-                        <button class="filter__form-tag">Starbucks</button>
+                      <div class="form__tags">
+                        <button class="form__tag">Lavazza</button>
+                        <button class="form__tag">Nescafe</button>
+                        <button class="form__tag">Starbucks</button>
                       </div>
                     </div>
                   </div>
