--- a/cart.html
+++ b/cart.html
@@ -271,20 +271,18 @@
         </div>
       </div>
     </main>
-
-    <!-- Dialog/modal -->
-    <div class="dialog hide" id="delete-confirm">
-      <div class="dialog__content">
-        <p class="dialog__text">
-          Lorem ipsum dolor, sit amet optio ut aut nam consequatur eos, asperiores sit laudantium.
-        </p>
-        <div class="dialog__bottom">
-          <button class="btn btn--text dialog__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
-          <button class="btn btn--primary btn--small dialog__btn">Delete</button>
+    <!-- modal :confirm reomove shopping cart item -->
+    <div class="modal modal--small hide" id="delete-confirm">
+      <div class="modal__content">
+        <p class="modal__text">Do you want remove this item?</p>
+        <div class="modal__bottom">
+          <button class="btn btn--outline modal__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
+          <button class="btn btn--primary btn--small btn--danger modal__btn">Remove</button>
         </div>
       </div>
-      <div class="dialog__overlay js-toggle" toggle-target="#delete-confirm"></div>
+      <div class="modal__overlay js-toggle" toggle-target="#delete-confirm"></div>
     </div>
+
     <!-- Footer -->
     <footer id="footer" class="footer"></footer>
     <script>
