--- a/checkout.html
+++ b/checkout.html
@@ -86,8 +86,14 @@
                     <article class="address-card">
                       <div class="address-card__left">
                         <div class="address-card__choose">
-                          <lable class="address-card__checkbox">
-                            <input type="checkbox" name="" id="" checked class="address-card__checkbox-input" />
+                          <lable class="cart-info__checkbox">
+                            <input
+                              type="radio"
+                              name="delivery-method"
+                              id=""
+                              checked
+                              class="cart-info__checkbox-input"
+                            />
                           </lable>
                         </div>
                         <div class="address-card__info">
@@ -101,7 +107,7 @@
                       </div>
                       <div class="address-card__right">
                         <div class="address-card__crtl">
-                          <button class="address-card__crtl-btn">
+                          <button class="cart-info__edit-btn">
                             <img src="./assets/img/icons/edit.svg" class="icon" alt="" />
                             Edit
                           </button>
@@ -112,8 +118,14 @@
                     <article class="address-card">
                       <div class="address-card__left">
                         <div class="address-card__choose">
-                          <lable class="address-card__checkbox">
-                            <input type="checkbox" name="" id="" class="address-card__checkbox-input" />
+                          <lable class="cart-info__checkbox">
+                            <input
+                              type="radio"
+                              name="delivery-method"
+                              id=""
+                              checked
+                              class="cart-info__checkbox-input"
+                            />
                           </lable>
                         </div>
                         <div class="address-card__info">
@@ -129,7 +141,7 @@
                       </div>
                       <div class="address-card__right">
                         <div class="address-card__crtl">
-                          <button class="address-card__crtl-btn">
+                          <button class="cart-info__edit-btn">
                             <img src="./assets/img/icons/edit.svg" class="icon" alt="" />
                             Edit
                           </button>
@@ -331,7 +343,9 @@
                   <span>Estimated Total</span>
                   <span>$201.65</span>
                 </div>
-                <a href="#!" class="btn btn--primary btn--rounded cart-info__checkout-btn">Continue to checkout</a>
+                <a href="./payment.html" class="btn btn--primary btn--rounded cart-info__checkout-btn">
+                  Continue to checkout
+                </a>
               </div>
               <div class="cart-info">
                 <div class="gift-item">
